# effempeg

./: Cargo.toml  README.md  configure.py
.github/workflows/: build-ffmpeg.yml
effempeg/: Cargo.toml  README.md
effempeg-player/: Cargo.toml
effempeg-player/src/: main.rs
effempeg-sys/: Cargo.toml  README.md  build.rs
effempeg-sys-bindgen/: Cargo.toml
effempeg-sys-bindgen/src/: main.rs
effempeg-sys/src/avutil/: error.rs
effempeg/examples/: chapters.rs  codec-info.rs  dump-frames.rs  frame-info.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-x264.rs
effempeg/src/: lib.rs
effempeg/src/codec/: capabilities.rs  codec.rs  context.rs  flag.rs  id.rs  mod.rs
effempeg/src/codec/decoder/: audio.rs  video.rs
effempeg/src/codec/encoder/: audio.rs
effempeg/src/filter/context/: sink.rs
effempeg/src/format/: io.rs
effempeg/src/format/stream/: stream.rs  stream_mut.rs
effempeg/src/software/: mod.rs
effempeg/src/software/resampling/: context.rs  flag.rs
effempeg/src/util/: channel_layout.rs  error.rs
effempeg/src/util/color/: space.rs
effempeg/src/util/format/: pixel.rs
effempeg/src/util/frame/: audio.rs  mod.rs  video.rs
