[package]
name    = "effempeg-sys"
version = "6.1.0"
build   = "build.rs"
links   = "ffmpeg"

authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
repository = "https://github.com/federico-terzi/effempeg"
license = "WTFPL"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
reqwest = {version="0.11.25", features=["blocking"]}
zip-extract = "0.1.3"

[features]
default  = ["standard"]

standard = []